--- a/files/brooklyn.service
+++ b/files/brooklyn.service
@@ -11,6 +11,8 @@ SyslogIdentifier=brooklyn
 User=brooklyn
 Group=www-data
 StandardError=syslog
+Restart=always
+RestartSec=10
 
 [Install]
 WantedBy=multi-user.target
