--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,8 +40,11 @@
   when: git_repo_updated.changed
 
 - name: Clean brooklyn opt dir
-  shell: /bin/rm -rf /opt/brooklyn/*
+  file:
+    state: absent
+    path: /opt/brooklyn
   when: git_repo_updated.changed
+
 
 - name: Move brooklyn jars to brooklyn opt dir
   command: cp -a /tmp/brooklyn/target/. /opt/brooklyn
