main.yml updated to support Brooklyn 0.3.3

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,7 @@ brooklyn_conf:
          username: "user"
          password: "password"
       ibot:
-         type: "IrcBot"
+         type: "IRCBot"
          username: "user"
          host: "chat.freenode.net"
       tbot:
